--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,6 +12,16 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
+// @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+// @import url(./fonts/JetBrainsMono-Regular.woff2);
+@font-face {
+  font-family: 'Inter';
+  src: url(./fonts/InterVariable.woff2);
+}
+
+// Set the default font-family
+$typography-font-family: 'Inter', serif !default;
+
 // Primary Colors
 $primary: #1e40af !default; // Deep Blue (Trust, Intelligence) - Improved contrast
 $secondary: #b38600 !default; // Darkened Gold (Innovation, High Value)
